--- a/content/style.css
+++ b/content/style.css
@@ -1,11 +1,13 @@
 body{
-	background: #F3A1B2;
+	/*background: #F3A1B2;*/
 }
 .wrapper{
 	width: 960px;
 	background: #fff;
 	margin: 0 auto;
 	padding: 10px 18px 60px;
+	border: 1px solid #334455;
+	border-top:0;
 }
 .tsvInput,
 .htmlOutput{
